feat(priceDrop): code improvements, shift to brevo as mailing client